2005-06-08  Kouhei Sutou  <kou@cozmixng.org>

	* sample/to_file.rb (Renderer#draw_rectangle, Renderer#draw_line):
	  added sample of Gnome::PrintContext#line_cap= and
	  Gnome::PrintContext#line_join=.

	* src/rbgp-gnome-print.c (gp_setfont, gp_glyphlist, RVAL2CONST_GF):
	  removed. use Pango instead of them.

2005-06-07  Kouhei Sutou  <kou@cozmixng.org>

	* sample/to_file.rb (Renderer#draw_concat): added concat() sample.

	* src/rbgp-gnome-print.c (rb_array_to_gdouble_array): fixed
	  strange conversion bug.

2005-06-07  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgp-gnome-print.c (gp_path): added generic function
	  for bpath and vpath.
	
	* src/rbgp-gnome-print.c (gp_bpath, gp_vpath):
	  - senconed argument 'append' is optional. default value is true.
	  - use get_art_bpath()/get_arg_vpath() provided by Ruby/Libart
	    instead of my macro.

	* sample/to_file.rb:
	  - added bpath and vpath sample.
	  - added label of sample for easy to find the target sample.

2005-06-05  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgp-utils.c (check_return_code): alwayes returns nil unless
	  raises an exception.

	* src/rbgp-gnome-print.c (gp_arcto): use boolean instead of 1
	  or 0.

	* sample/to_file.rb (Renderer#draw_arc): followed the above
	  change.

2005-02-01  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: reverted dependency.

2005-01-31  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: updated dependency.

	* README: ditto.

	* src/rbgp-gpa-settings.c (gp_gpa_settings_initialize): `model' is
	  always required because gpa_settings_new_empty()'s
	  implementation doesn't exist.

2005-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Follow mkmf-gnome2.rb changes. 

2004-12-16  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgp-gnome-print-config.c (gp_config_get_length): fixed
	  GnomePrintUnit <-> Ruby object bug.
	  (gp_config_set_length): ditto.

	* src/rbgp-gnome-print-unit.c: changed PrintUnit#convert_distance
	  to generic method.
