@@ -73,11 +73,25 @@ class Renderer
       @context.set_rgb_color(0, 0, 1)
 
       label("line", 120, 200)
+
+      @context.save do
+        @context.move_to(100, 100)
+        @context.line_to(170, 200)
+
+        @context.set_dash([5, 3], 0)
+        @context.line_width = 10
+        @context.stroke
+      end
       
-      @context.move_to(100, 100)
-      @context.line_to(170, 200)
-      @context.line_width = 10
-      @context.stroke
+      @context.save do
+        @context.move_to(115, 90)
+        @context.line_to(185, 190)
+
+        @context.set_dash([5, 3], 2)
+        @context.line_width = 10
+        @context.stroke
+      end
+      
       @context.line_width = 20
       @context.line_cap = Art::PATH_STROKE_CAP_ROUND
       @context.line_stroked(100, 500, 170, 200)
@@ -108,7 +122,7 @@ class Renderer
       @context.stroke
       @context.save do
         @context.set_rgb_color(1, 0.4, 0.9)
-        @context.set_opacity(0.7)
+        @context.opacity = 0.7
         @context.arc_to(40, 450, 10, 0, 359, false)
         @context.fill
       end
@@ -210,14 +224,8 @@ class Renderer
     filename = Dir["**/*.png"].first
     pixbuf = Gdk::Pixbuf.new(filename)
     @context.save do
-      @context.translate(350, 500)
-      @context.scale(pixbuf.width, pixbuf.height)
-      args = [pixbuf.pixels, pixbuf.width, pixbuf.height, pixbuf.rowstride]
-      if pixbuf.has_alpha?
-        @context.rgba_image(*args)
-      else
-        @context.rgb_image(*args)
-      end
+      @context.translate(350, 450)
+      @context.image(pixbuf)
     end
   end
 
